# docs/swagger.json
@@ -7,7 +7,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/compostos": {
+        "/juros-compostos": {
             "post": {
                 "description": "Recebe valores de entrada e retorna o montante acumulado ao longo do tempo",
                 "consumes": [
@@ -17,7 +17,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Calculo"
+                    "Juros Compostos"
                 ],
                 "summary": "Calcula juros compostos",
                 "parameters": [
@@ -27,7 +27,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.Entrada"
+                            "$ref": "#/definitions/main.InputJurosCompostos"
                         }
                     }
                 ],
@@ -75,10 +75,56 @@
                     }
                 }
             }
+        },
+        "/simulacao-parcelas": {
+            "post": {
+                "description": "Esta ação recebe os parâmetros do valor do produto, número de parcelas e taxa de juros, e retorna uma simulação das parcelas, com o valor da parcela, juros pagos, amortização e saldo devedor.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Simulação de Parcelas fixas em um financiamento com juros compostos"
+                ],
+                "summary": "Simula o parcelamento de um produto com juros compostos.",
+                "parameters": [
+                    {
+                        "description": "Dados de entrada para a simulação",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.InputSimulacaoParcela"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Simulação das parcelas com juros",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.Simulacao"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Erro de entrada com mensagem explicativa",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "main.Entrada": {
+        "main.InputJurosCompostos": {
             "type": "object",
             "properties": {
                 "capital": {
@@ -92,6 +138,20 @@
                 }
             }
         },
+        "main.InputSimulacaoParcela": {
+            "type": "object",
+            "properties": {
+                "parcelas": {
+                    "type": "integer"
+                },
+                "taxa": {
+                    "type": "number"
+                },
+                "valor_produto": {
+                    "type": "number"
+                }
+            }
+        },
         "main.Montante": {
             "type": "object",
             "properties": {
@@ -99,6 +159,26 @@
                     "type": "integer"
                 },
                 "montante_acumulado": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.Simulacao": {
+            "type": "object",
+            "properties": {
+                "amortizacao": {
+                    "type": "string"
+                },
+                "juros_pago": {
+                    "type": "string"
+                },
+                "mes": {
+                    "type": "integer"
+                },
+                "saldo_devedor": {
+                    "type": "string"
+                },
+                "valor_parcela": {
                     "type": "string"
                 }
             }
